@@ -1,3 +1,7 @@
+2016-01-09  Liu Xin  <meteor1113@qq.com>
+
+	* init/modules/init-toolbar.el: Remove flycheck-clear.xpm
+
 2015-12-31  Liu Xin  <meteor1113@qq.com>
 
 	* init/modules/init-toolbar.el: Set toolbar for flycheck.
